--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   geolocator: ^8.2.0
   http: ^0.13.4
   flutter_spinkit: ^5.1.0
+  flutter_dotenv: ^5.0.2
 
 dev_dependencies:
   flutter_test:
@@ -24,6 +25,7 @@ flutter:
 
   assets:
   - images/
+  - dev.env
 
   fonts:
   - family: Spartan MB
